# vinescribe

./: .env.example  README.md  pyproject.toml
deploy/: deploy.sh  run_service.sh  vinescribe.service.example  vinescribe.timer
src/vinescribe/: main.py
src/vinescribe/models/: wine.py
src/vinescribe/services/: gmail.py  image.py  llm.py
tests/: gmail_tests.py  vinescribe_tests.py
